--- a/railway.toml
+++ b/railway.toml
@@ -8,14 +8,22 @@ buildCommand = "npm install && npm run build"
 
 # Deployment configuration
 [deploy]
-startCommand = "NODE_ENV=production node dist/index.js"
+startCommand = "npm start"
 healthcheckPath = "/"
 healthcheckTimeout = 120  # seconds
 restartPolicyType = "always"
 restartPolicyMaxRetries = 5
 
-# Environment variable OPENAI_API_KEY IS already set in Railway dashboard
+# Environment variables
+[deploy.environment]
+NODE_ENV = "production"
+NODE_VERSION = "20"  # Match the Node.js version used in development
 
-# MarkB r00lz mad n00bz. 
+# Required database configuration
+[deploy.environment.DATABASE_URL]
+generator = "postgresql"
 
-
+# Optional: Uncomment and set to your database name if needed
+# [deploy.environment.POSTGRES_DB]
+# generator = "postgresql"
+# name = "arc_explainer"
