--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "cross-env NODE_ENV=development tsx server/index.ts",
-    "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist --define:process.env.NODE_ENV=\"production\" --banner:js='import { fileURLToPath } from \"url\"; import { dirname } from \"path\"; const __filename = fileURLToPath(import.meta.url); const __dirname = dirname(__filename);' --banner:ts='import { fileURLToPath } from \"url\"; import { dirname } from \"path\"; const __filename = fileURLToPath(import.meta.url); const __dirname = dirname(__filename);' --log-level=warning",
+    "build": "vite build && cross-env NODE_ENV=production esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist --banner:js=\"import { fileURLToPath } from 'url'; import { dirname } from 'path'; const __filename = fileURLToPath(import.meta.url); const __dirname = dirname(__filename);\" --log-level=warning",
     "start": "cross-env NODE_ENV=production node dist/index.js",
     "check": "tsc",
     "db:push": "drizzle-kit push",
