--- a/railway.toml
+++ b/railway.toml
@@ -4,7 +4,7 @@
 # Build configuration
 [build]
 builder = "nixpacks"
-buildCommand = "rm -rf node_modules && npm cache clean --force && npm install --no-optional && npm run build"
+buildCommand = "npm install && npm run build"
 
 # Deployment configuration
 [deploy]
