--- a/railway.toml
+++ b/railway.toml
@@ -4,7 +4,7 @@
 # Build configuration
 [build]
 builder = "nixpacks"
-buildCommand = "npm install && npm run build"
+buildCommand = "npm install --omit=dev && npm run build"
 
 # Deployment configuration
 [deploy]
@@ -14,7 +14,7 @@ restartPolicyType = "always"
 # Environment variables
 [deploy.environment]
 NODE_ENV = "production"
-NODE_VERSION = "20.13.1"  # Exact Node.js version for consistency
+NODE_VERSION = "20.13.1"  # Using Node.js 20 for better ESM support
 
 # Nixpacks configuration
 [build.nixpacks]
