--- a/railway.toml
+++ b/railway.toml
@@ -1,10 +1,10 @@
 # Railway configuration for ARC Explainer
-# Author: Cascade AI
+# Author: CLAUDE 4 Sonnet
 
 # Use Nixpacks (Node.js) for building
 [build]
 builder = "nixpacks"
-buildCommand = "npm install && npm run build"
+buildCommand = "npm ci && npm run build"
 
 # Deployment settings
 [deploy]
@@ -14,4 +14,10 @@ restartPolicyType = "always"
 # Environment variables
 [deploy.environment]
 NODE_ENV = "production"
-NODE_VERSION = "20.13.1"
+NODE_VERSION = "20"
+
+# Health check settings
+[deploy.healthcheck]
+path = "/api/health"
+timeout = 10
+interval = 30
