--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "windows-start": "set NODE_ENV=production&&node dist/index.js"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.56.0",
     "@hookform/resolvers": "^3.10.0",
     "@jridgewell/trace-mapping": "^0.3.25",
     "@neondatabase/serverless": "^0.10.4",
