--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "prod": "npm run build && npm start",
     "db:push": "drizzle-kit push",
     "windows-dev": "set NODE_ENV=development&&tsx server/index.ts",
-    "windows-start": "set NODE_ENV=production&&node dist/index.js"
+    "windows-start": "set NODE_ENV=production&&node dist/index.js",
+    "recover": "tsx server/dataRecovery.ts",
+    "db:fix-names": "tsx scripts/fix-model-names.ts"
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.56.0",
