chore: Finalize data recovery and cleanup scripts
This commit includes the final, robust versions of the data recovery and database cleanup scripts. It also adds dedicated npm scripts (ecover, db:fix-names) to ensure they are run in a consistent and reliable environment, resolving previous silent execution failures.

The parsing logic in both scripts has been hardened to correctly handle all model name variations, ensuring data integrity.

Co-authored-by: Cascade <cascade@windsurf.ai>

--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "db:push": "drizzle-kit push",
     "windows-dev": "set NODE_ENV=development&&tsx server/index.ts",
     "windows-start": "set NODE_ENV=production&&node dist/index.js",
-    "recover": "tsx server/dataRecovery.ts",
-    "db:fix-names": "tsx scripts/fix-model-names.ts"
+    "recover": "node --import tsx server/dataRecovery.ts",
+    "db:fix-names": "node --import tsx scripts/fix-model-names.ts",
+    "test:repo-init": "node --import tsx scripts/test-repo-init.ts",
+    "test:db-conn": "node --import tsx scripts/test-db-connection.ts"
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.56.0",
