--- a/package.json
+++ b/package.json
@@ -14,10 +14,7 @@
     "windows-dev": "set NODE_ENV=development&&tsx server/index.ts",
     "windows-start": "set NODE_ENV=production&&node dist/index.js",
     "recover": "node --import tsx server/dataRecovery.ts",
-    "db:fix-names": "node --import tsx scripts/fix-model-names.ts",
-    "test:repo-init": "node --import tsx scripts/test-repo-init.ts",
-    "test:db-conn": "node --import tsx scripts/test-db-connection.ts"
-  },
+    "db:fix-names": "node --import tsx scripts/fix-model-names.ts"  },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.56.0",
     "@google/genai": "^1.9.0",
