--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "windows-dev": "set NODE_ENV=development&&tsx server/index.ts",
     "windows-start": "set NODE_ENV=production&&node dist/index.js",
     "recover": "node --import tsx server/dataRecovery.ts",
-    "db:fix-names": "node --import tsx scripts/fix-model-names.ts"  },
+    "db:fix-names": "node --import tsx scripts/fix-model-names.ts",
+    "generate-favicons": "tsx scripts/generateFavicons.ts",
+    "generate-new-favicon": "tsx scripts/generateNewFavicon.ts"
+  },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.56.0",
     "@google/genai": "^1.9.0",
@@ -53,6 +56,7 @@
     "@types/cors": "^2.8.19",
     "@types/pg": "^8.15.4",
     "axios": "^1.11.0",
+    "canvas": "^3.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -77,6 +81,7 @@
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
+    "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.55.0",
     "react-icons": "^5.4.0",
     "react-resizable-panels": "^2.1.7",
@@ -108,13 +113,14 @@
     "@vitejs/plugin-react": "^4.3.2",
     "autoprefixer": "^10.4.20",
     "cross-env": "^7.0.3",
-    "drizzle-kit": "^0.30.4",
+    "drizzle-kit": "^0.18.1",
     "esbuild": "^0.25.0",
     "postcss": "^8.4.47",
+    "sharp": "^0.34.4",
     "tailwindcss": "^3.4.17",
     "tsx": "^4.19.1",
     "typescript": "5.6.3",
-    "vite": "^5.4.19"
+    "vite": "^7.1.6"
   },
   "optionalDependencies": {
     "bufferutil": "^4.0.8"
