--- a/package.json
+++ b/package.json
@@ -14,9 +14,7 @@
     "windows-dev": "set NODE_ENV=development&&tsx server/index.ts",
     "windows-start": "set NODE_ENV=production&&node dist/index.js",
     "recover": "node --import tsx server/dataRecovery.ts",
-    "db:fix-names": "node --import tsx scripts/fix-model-names.ts",
-    "generate-favicons": "tsx scripts/generateFavicons.ts",
-    "generate-new-favicon": "tsx scripts/generateNewFavicon.ts"
+    "db:fix-names": "node --import tsx scripts/fix-model-names.ts"
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.56.0",
