Add puzzle analysis script to query database for correct model solutions
- Created puzzle-analysis.ts script that queries database for specific puzzle IDs
- Gets all models that correctly solved each puzzle (no limits)
- Categorizes all puzzles into: solved, tested but not solved, and not tested
- Added npm script 'analyze-puzzles' for easy execution with tsx
- Script uses database fields: model_name, is_prediction_correct, multi_test_all_correct, puzzle_id
- Follows same database connection pattern as existing search-db.js
- Author: Gemini 2.5 Pro

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "windows-dev": "set NODE_ENV=development&&tsx server/index.ts",
     "windows-start": "set NODE_ENV=production&&node dist/index.js",
     "recover": "node --import tsx server/dataRecovery.ts",
-    "db:fix-names": "node --import tsx scripts/fix-model-names.ts"
+    "db:fix-names": "node --import tsx scripts/fix-model-names.ts",
+    "analyze-puzzles": "node --import tsx puzzle-analysis.ts"
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.56.0",
