Add script to analyze unsolved and untested puzzles with GPT-5
- Created analyze-unsolved-puzzles.ts script that uses external API endpoints
- Triggers analysis of 80 puzzles (17 tested but not solved + 63 not tested)
- Uses GPT-5-2025-08-07 model with 'medium' reasoning effort setting
- Mirrors client UI behavior with same request structure and parameters
- Includes proper error handling, progress tracking, and rate limiting
- Skips puzzles that already have explanations to avoid duplicates
- Added npm script 'analyze-unsolved' for easy execution
- Uses axios for HTTP requests with 5-minute timeout per puzzle
- Provides detailed progress updates and final summary statistics
- Author: Gemini 2.5 Pro

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "windows-start": "set NODE_ENV=production&&node dist/index.js",
     "recover": "node --import tsx server/dataRecovery.ts",
     "db:fix-names": "node --import tsx scripts/fix-model-names.ts",
-    "analyze-puzzles": "node --import tsx puzzle-analysis.ts"
+    "analyze-puzzles": "node --import tsx puzzle-analysis.ts",
+    "analyze-unsolved": "node --import tsx analyze-unsolved-puzzles.ts"
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.56.0",
