--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "recover": "node --import tsx server/dataRecovery.ts",
     "db:fix-names": "node --import tsx scripts/fix-model-names.ts",
     "analyze-puzzles": "node --import tsx puzzle-analysis.ts",
-    "analyze-unsolved": "node --import tsx analyze-unsolved-puzzles.ts"
+    "analyze-unsolved": "node --import tsx analyze-unsolved-puzzles.ts",
+    "retry-failed": "node --import tsx retry-failed-puzzles.ts"
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.56.0",
