--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "windows-start": "set NODE_ENV=production&&node dist/index.js",
     "recover": "node --import tsx server/dataRecovery.ts",
     "db:fix-names": "node --import tsx scripts/fix-model-names.ts",
-    "analyze-puzzles": "node --import tsx puzzle-analysis.ts",
-    "analyze-unsolved": "node --import tsx analyze-unsolved-puzzles.ts",
-    "retry-failed": "node --import tsx retry-failed-puzzles.ts"
+    "ap": "node --import tsx puzzle-analysis.ts",
+    "au": "node --import tsx analyze-unsolved-puzzles.ts",
+    "retry": "node --import tsx retry-failed-puzzles.ts"
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.56.0",
