feat: Add flexible puzzle processor to replace hardcoded scripts
WHAT THIS DOES:
- Creates flexible-puzzle-processor.ts - a comprehensive replacement for retry-failed-puzzles.ts, analyze-unsolved-puzzles.ts, and puzzle-analysis.ts
- Provides 4 operation modes: analyze, query, validate, retry
- Supports multiple puzzle sources: directory, specific IDs, unsolved puzzles, failure files
- Shows real-time validation results with prediction accuracy tracking
- Records failures automatically with retry file generation
- Zero hardcoded values - everything configurable via command line

HOW IT WORKS:
- Parse command line arguments to build flexible configuration
- Load puzzles from various sources (directories, database queries, files)
- Process puzzles based on mode: analyze (AI calls), query (DB only), validate (check accuracy), retry (re-run failures)
- Display detailed results with validation status and timing
- Record failures to JSON files with automatic retry commands
- Support concurrent processing with rate limiting and batching

HOW THE PROJECT USES IT:
- Replaces 3 old scripts that had hardcoded models/directories
- Provides npm run process command with full argument support
- Enables flexible puzzle analysis workflows for any model/dataset combination
- Supports failure tracking and retry workflows for robust batch processing
- Integrates with existing database schema and API endpoints

TECHNICAL DETAILS:
- TypeScript with proper interfaces and error handling
- PostgreSQL integration for validation queries and status checking
- Axios HTTP client for API calls to analysis endpoints
- Command line argument parsing with comprehensive help system
- Graceful shutdown handling and database connection cleanup

Author: Cascade using Claude 3.5 Sonnet

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ap": "node --import tsx puzzle-analysis.ts",
     "au": "node --import tsx analyze-unsolved-puzzles.ts",
     "retry": "node --import tsx retry-failed-puzzles.ts",
+    "process": "node --import tsx flexible-puzzle-processor.ts",
     "openrouter": "node --import tsx scripts/testing/test-openrouter-models.ts",
     "openrouter-multi": "node --import tsx scripts/testing/test-openrouter-multi-output.ts"
   },
