--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "retry": "node --import tsx retry-failed-puzzles.ts",
     "process": "node --import tsx flexible-puzzle-processor.ts",
     "openrouter": "node --import tsx scripts/testing/test-openrouter-models.ts",
-    "openrouter-multi": "node --import tsx scripts/testing/test-openrouter-multi-output.ts"
+    "openrouter-multi": "node --import tsx scripts/testing/test-openrouter-multi-output.ts",
+    "models": "node --import tsx scripts/manage-models.ts"
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.56.0",
