feat: Implement HuggingFace dataset ingestion CLI script
Phase 1 complete: Full-featured proof-of-concept script

- Ingests external AI predictions from HuggingFace datasets
- Validates ALL predictions against actual puzzles BEFORE saving
- Handles single-test and multi-test puzzles correctly
- Extracts: predictions, reasoning, tokens, cost, timing
- Calculates: isPredictionCorrect, predictionAccuracyScore
- Multi-test: multiTestAllCorrect, multiTestAverageAccuracy
- Duplicate detection with skip/overwrite modes
- Comprehensive error handling (validation, database, not-found)
- Progress reporting with detailed summary statistics
- Dry run mode for testing without database writes
- Uses responseValidator and repositoryService (follows architecture)
- Command: npm run ingest-hf -- --dataset claude-sonnet-4-5-20250929
- Supports HUGGINGFACE_TOKEN for authenticated requests
- Ready for production use on arc_agi_v1_public_eval dataset

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "process": "node --import tsx flexible-puzzle-processor.ts",
     "openrouter": "node --import tsx scripts/testing/test-openrouter-models.ts",
     "openrouter-multi": "node --import tsx scripts/testing/test-openrouter-multi-output.ts",
-    "models": "node --import tsx scripts/manage-models.ts"
+    "models": "node --import tsx scripts/manage-models.ts",
+    "ingest-hf": "node --import tsx server/scripts/ingest-huggingface-dataset.ts"
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.56.0",
