--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "openrouter": "node --import tsx scripts/testing/test-openrouter-models.ts",
     "openrouter-multi": "node --import tsx scripts/testing/test-openrouter-multi-output.ts",
     "models": "node --import tsx scripts/manage-models.ts",
-    "ingest-hf": "node --import tsx server/scripts/ingest-huggingface-dataset.ts"
+    "ingest-hf": "node --import tsx server/scripts/ingest-huggingface-dataset.ts",
+    "cleanup-hf": "node --import tsx server/scripts/cleanup-huggingface-imports.ts"
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.56.0",
