--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "openrouter-multi": "node --import tsx scripts/testing/test-openrouter-multi-output.ts",
     "models": "node --import tsx scripts/manage-models.ts",
     "ingest-hf": "node --import tsx server/scripts/ingest-huggingface-dataset.ts",
-    "cleanup-hf": "node --import tsx server/scripts/cleanup-huggingface-imports.ts"
+    "cleanup-hf": "node --import tsx server/scripts/cleanup-huggingface-imports.ts",
+    "del": "node --import tsx server/scripts/delete-hf-now.ts"
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.56.0",
