feat: integrate jjoshua2/arc_agi solver as git submodule
- Add arc_agi solver as git submodule from https://github.com/jjoshua2/arc_agi
- Set up CODEOWNERS for proper ownership (@jjoshua2 @82deutschmark)
- Configure LFS rules for .pkl files in .gitattributes
- Create CLI adapter in arc_agi/cli.py that outputs JSON contract format:
  { 'program': '<name>', 'predicted_output_grid': [[...]] }
  or { 'program': '<name>', 'multiple_predicted_outputs': [ [[...]], ... ] }
- Add pyproject.toml with proper entry point for arc-agi-cli command
- Wire jjosh-arc-agi solver into aiServiceFactory with jjosh service
- Implement JjoshService extending BaseAIService following established patterns
- Add CI workflow for arc_agi repo (ci.yml) with Python tests
- Add solver smoke test workflow for arc-explainer (solver-smoke.yml)
- Set up auto-bump workflow (bump-arc_agi.yml) for upstream releases
- Integration ready: solver accessible via 'jjosh-arc-agi' model key

This creates a robust external solver integration pattern that can be used
for other external solvers in the future, following the same BaseAIService
architecture as Grover and Saturn services.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "solver/grover-arc"]
 	path = solver/grover-arc
 	url = https://github.com/zoecarver/grover-arc
+[submodule "solvers/arc_agi"]
+	path = solvers/arc_agi
+	url = https://github.com/jjoshua2/arc_agi
