--- a/package.json
+++ b/package.json
@@ -127,6 +127,7 @@
     "daisyui": "^5.2.3",
     "drizzle-kit": "^0.18.1",
     "esbuild": "^0.25.0",
+    "eventsource": "^4.0.0",
     "postcss": "^8.4.47",
     "sharp": "^0.34.4",
     "tailwindcss": "^3.4.17",
