feat: add external ARC solver submodules and update changelog
- Integrated ARC3-solution (82deutschmark/nov4 branch) and ARC-AGI-3-ClaudeCode-SDK as git submodules
- Updated CHANGELOG.md with recent feature additions and bug fixes

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,1 +1,8 @@
 
+[submodule "external/ARC3-solution"]
+	path = external/ARC3-solution
+	url = https://github.com/82deutschmark/ARC3-solution
+	branch = nov4
+[submodule "external/ARC-AGI-3-ClaudeCode-SDK"]
+	path = external/ARC-AGI-3-ClaudeCode-SDK
+	url = https://github.com/ThariqS/ARC-AGI-3-ClaudeCode-SDK
