--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,13 @@
 # Includes the OpenAI SDK plus imaging libs used by solver/arc_visual_solver.py and visualizers.
 # Author: Cascade (model: GPT-5 medium reasoning)
 
+# Saturn Visual Solver dependencies
 openai>=1.0.0
 pillow>=9.0.0
 numpy>=1.20.0
 python-dotenv>=1.0.0
+
+# Poetiq Code-Generation Solver dependencies
+asynciolimiter==1.2.0
+litellm==1.78.2
+scipy==1.16.3
