feat(poetiq): Add reasoning effort control for extended thinking models
Added reasoning effort dropdown (low/medium/high) to control thinking budget for models that support extended reasoning (Claude, Gemini, o1). Parameter flows from UI through WebSocket to Python wrapper and is passed to LLM via extra kwargs. Auto-configures Claude thinking budget when high/medium effort selected. Updated poetiq-solver submodule to support reasoning_effort parameter and added numpy dependency.

--- a/requirements.txt
+++ b/requirements.txt
@@ -12,4 +12,5 @@ python-dotenv>=1.0.0
 # Poetiq Code-Generation Solver dependencies
 asynciolimiter==1.2.0
 litellm==1.78.2
+numpy==2.3.4
 scipy==1.16.3
