feat(poetiq): Internalize solver, replace litellm with direct Google SDK v5.30.0
MAJOR ARCHITECTURE CHANGE: Moved Poetiq solver from git submodule into solver/poetiq/, following the established Saturn solver pattern. KEY CHANGES: (1) Created solver/poetiq/ with 12 Python files internalized from poetiq-solver submodule (2) Replaced litellm with direct google-generativeai SDK calls in llm.py (3) Token usage tracking now captured and returned (input_tokens, output_tokens, total_tokens) - this data was previously discarded (4) Updated poetiq_wrapper.py to import from solver.poetiq instead of submodule (5) Updated requirements.txt to use google-generativeai instead of litellm. BENEFITS: No external submodule dependency, consistent architecture with Saturn/Grover, token tracking for cost analysis, uses existing API key infrastructure, removes unnecessary abstraction. Author: Cascade (Claude Sonnet 4)

--- a/requirements.txt
+++ b/requirements.txt
@@ -9,8 +9,9 @@ pillow>=9.0.0
 numpy>=1.20.0
 python-dotenv>=1.0.0
 
-# Poetiq Code-Generation Solver dependencies
+# Poetiq Code-Generation Solver dependencies (internalized from poetiq-solver submodule)
+# Uses direct Google Generative AI SDK instead of litellm
 asynciolimiter==1.2.0
-litellm==1.78.2
-numpy==2.3.4
-scipy==1.16.3
+google-generativeai>=0.8.0
+numpy>=1.20.0
+scipy>=1.10.0
