fix(poetiq): Restore litellm, add SDK backends, capture token usage v5.30.0 REVISED
REVISED APPROACH: My first implementation incorrectly removed litellm. This version keeps litellm for faithful replication of original Poetiq while fixing the real problem: token usage data was being discarded. KEY CHANGES: (1) Restored litellm-based llm.py but now captures resp.usage token data (2) Added all SDK backends: google-generativeai, openai, anthropic (3) litellm routes to these backends for multi-provider support (4) Token usage now flows through solve_coding.py and attaches to ARCAGIResult. WHY THIS IS BETTER: Original Poetiq discarded resp.usage - litellm DOES provide token counts, Poetiq just threw them away. This fix captures that data without changing the architecture. Author: Cascade (Claude Sonnet 4)

--- a/requirements.txt
+++ b/requirements.txt
@@ -10,8 +10,12 @@ numpy>=1.20.0
 python-dotenv>=1.0.0
 
 # Poetiq Code-Generation Solver dependencies (internalized from poetiq-solver submodule)
-# Uses direct Google Generative AI SDK instead of litellm
-asynciolimiter==1.2.0
+# litellm for multi-provider routing (faithful to original Poetiq)
+# SDK backends so litellm can route to each provider
+litellm>=1.50.0
 google-generativeai>=0.8.0
+openai>=1.0.0
+anthropic>=0.40.0
+asynciolimiter>=1.2.0
 numpy>=1.20.0
 scipy>=1.10.0
