--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,28 @@
 # Root Python dependencies for ARC Explainer (used by Docker build)
 # Author: Cascade (Claude)
 # Updated: 2026-01-31 - Created for Railway deployment
+# NOTE: Dependencies are inlined here because Docker copies this file before solver/
 
-# Include all solver dependencies
--r solver/requirements.txt
+# ===========================================
+# Core Dependencies (shared across solvers)
+# ===========================================
+numpy>=1.20.0
+pillow>=9.0.0
+imageio>=2.34.0
+imageio-ffmpeg>=0.5.1
+python-dotenv>=1.0.0
+asynciolimiter>=1.2.0
+scipy>=1.10.0
 
-# ARCEngine community games runner dependencies
-# (ARCEngine core is vendored in external/ARCEngine)
+# ===========================================
+# Direct Provider SDKs
+# ===========================================
+openai>=1.0.0
+anthropic>=0.40.0
+google-genai>=1.52.0
+langchain-openai>=1.1.0
+
+# ===========================================
+# ARCEngine community games (no extra deps needed)
+# ===========================================
+# ARCEngine core is vendored in external/ARCEngine
