feat(submodules): add beetreeARC and llm-council as git submodules
Add beetreeARC from 82deutschmark/beetreeARC and llm-council from VoynichLabs/llm-council repositories as submodules at project root. Initialize beetreeARC at commit 9d18ad6 and llm-council at commit 0082520.

--- a/.gitmodules
+++ b/.gitmodules
@@ -8,3 +8,9 @@
 	path = external/ARCEngine
 	url = https://github.com/82deutschmark/ARCEngine
 	branch = main
+[submodule "beetreeARC"]
+	path = beetreeARC
+	url = https://github.com/82deutschmark/beetreeARC
+[submodule "llm-council"]
+	path = llm-council
+	url = https://github.com/VoynichLabs/llm-council.git
