feat(submodules): re-add ARCEngine as git submodule at external/ARCEngine
Register ARCEngine from 82deutschmark/ARCEngine repository as submodule at external/ARCEngine path. Initialize at commit 394d25c. Complements existing Dockerfile clone fallback for Railway deployments while enabling local submodule workflow.

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "llm-council"]
 	path = llm-council
 	url = https://github.com/VoynichLabs/llm-council.git
+[submodule "external/ARCEngine"]
+	path = external/ARCEngine
+	url = https://github.com/82deutschmark/ARCEngine
